--- a/64/MediScribe.Applications.Main.exe.config
+++ b/64/MediScribe.Applications.Main.exe.config
@@ -58,7 +58,7 @@
   <appSettings>
     <add key="version" value="1.0.0.0" />
     <add key="Login" value="" />
-    <add key="ServiceCode" value="Lifehouse" />
+    <add key="ServiceCode" value="" />
     <add key="Password" value="" />
     <add key="ServerDir" value="HelperFiles\" />
     <add key="LicenseServerTimeout" value="30" />
